# Kagle_project_week2

./: .gitignore  README.md  app.py  house_model.pkl  pyproject.toml  requirements.txt
data/: submission.csv
models/: preprocessor.pkl  voting_pipeline.pkl
notebooks/Bek/: model.ipynb  preprocessing.ipynb
notebooks/Maxim/: house.ipynb  my_submission.csv  project.ipynb
notebooks/Yaroslav/: kagle.ipynb
